--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="dist/styles/index.min.css">
 	<title>mysilt</title>
 </head>
-<body class="layoutWrap">
+<body class="layoutWrap" page='index'>
 	<!-- 头部开始 -->
 	<header id="heade" class="header">
 		<h1 class="logo"><a href="index.html">HI <span>王帅</span></a></h1>
@@ -39,7 +39,17 @@
 	<section class="blogList">
 		<div class="outwrap">
 			<div class="wrap">
-				<div class="blogArticle">123123123123132</div>
+				<div class="blogArticle">
+					<div class="articleHeaderPic">
+						<a href="javascript:void(0)">
+							<img src="src/images/pic_10.jpg" alt="">
+						</a>
+					</div>
+					<h3><a href="">前端构建工具GULPJS的使用介绍及技巧</a></h3>
+					<div class="content">
+						<p></p>
+					</div>
+				</div>
 				<div class="blogArticle">123123123123132</div>
 			</div>
 			<div class="wrap">
@@ -50,4 +60,6 @@
 	</section>
 	<!-- 列表结束 -->
 </body>
+<script src="./src/javascript/libs/seajs/2.1.1/sea.js"></script>
+<script src="./src/javascript/sea-config.js"></script>
 </html>	
