--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
 	</section>
 	<!-- 列表结束 -->
 </body>
-<script src="./src/javascript/libs/seajs/2.1.1/sea.js"></script>
+<script src="./src/javascript/sea-debug.js"></script>
 <script src="./src/javascript/sea-config.js"></script>
 </html>	
